--- a/index.html
+++ b/index.html
@@ -250,8 +250,27 @@
             </div>
             <div class="my-3">
               <h3 class="text-center mb-2" id="soti">Соты</h3>
-              <div class="text-center">
-                <div class="row row-cols-1 row-cols-sm-5">
+              <div class="text-center row">
+                <div class="row order-sm-last row-cols-1 row-cols-sm-5">
+                  <div class="col"></div>
+                  <div class="col">
+                    <div class="card text-white bg-danger mb-3 mx-auto">
+                      <div class="card-body">
+                        <h4 id="s-fnz1">0</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col"></div>
+                  <div class="col">
+                    <div class="card text-white bg-danger mb-3 mx-auto">
+                      <div class="card-body">
+                        <h4 id="s-fnz2">0</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col"></div>
+                </div>
+                <div class="row order-sm-first row-cols-1 row-cols-sm-5">
                   <div class="col mx-auto">
                     <div class="card text-white bg-danger mb-3 mx-auto">
                       <div class="card-body">
@@ -341,25 +360,6 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="row row-cols-1 row-cols-sm-5">
-                  <div class="col"></div>
-                  <div class="col">
-                    <div class="card text-white bg-danger mb-3 mx-auto">
-                      <div class="card-body">
-                        <h4 id="s-fnz1">0</h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col"></div>
-                  <div class="col">
-                    <div class="card text-white bg-danger mb-3 mx-auto">
-                      <div class="card-body">
-                        <h4 id="s-fnz2">0</h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col"></div>
                 </div>
               </div>
             </div>
